# net_mujoco

./: .gitignore  README.md  example_passive.py  launch_passive_demo.py  pyproject.toml
.github/workflows/: main.yml
assets/: sample_scene.xml
mujoco_wasm/: index.html  package.json
mujoco_wasm/src/: main.js
net_mujoco/: __init__.py  net_mujoco.py  server.py
tests/: test_net_mujoco.py
